--- a/UDEMY/02-HTML-Fundamentals/index.html
+++ b/UDEMY/02-HTML-Fundamentals/index.html
@@ -15,7 +15,10 @@
     <h6>The Basic Language of the Web: HTML</h6>
     -->
     <h1>📘 The Code Magazine</h1>
-
+    <a href="Blog.html">Blog</a>
+    <a href="Challenge.html">Challenges</a>
+    <a href="Flexbox.html">Flexbox</a>
+    <a href="Css Grid.html">CSS Grid</a>
     <h2>The Basic Language of the Web: HTML</h2>
     <img
       src="laura-jones.jpg"
@@ -63,7 +66,15 @@
       <li>The closing tag</li>
       <li>The actual element</li>
     </ol>
-    You can learn more at the MDN Web Docs.
+    <p>
+      You can learn more at the
+      <a
+        href="https://developer.mozilla.org/en-US/docs/Web/HTML"
+        target="_blank"
+      >
+        MDN Web Docs</a
+      >.
+    </p>
 
     <h3>Why should you learn HTML?</h3>
     <p>
