--- a/UDEMY/02-HTML-Fundamentals/index.html
+++ b/UDEMY/02-HTML-Fundamentals/index.html
@@ -19,7 +19,7 @@
 
       <nav>
         <a href="Blog.html">Blog</a>
-        <a href="#">Challenges</a>
+        <a href="Challenges.html">Challenges</a>
         <a href="#">Flexbox</a>
         <a href="#">CSS Grid</a>
       </nav>
