--- a/UDEMY/03-CSS-Fundamentals/index.html
+++ b/UDEMY/03-CSS-Fundamentals/index.html
@@ -148,7 +148,9 @@
     </aside>
 
     <footer>
-      <p id="copylight">Copyright &copy; 2027 by The Code Magazine.</p>
+      <p id="copyright" class="Copyright">
+        Copyright &copy; 2027 by The Code Magazine.
+      </p>
     </footer>
   </body>
 </html>
