--- a/UDEMY/03-CSS-Fundamentals/index.html
+++ b/UDEMY/03-CSS-Fundamentals/index.html
@@ -21,6 +21,7 @@
       <h1>📘 The Code Magazine</h1>
 
       <nav>
+        <!-- <strong>This is the navigation.</strong> -->
         <a href="blog.html">Blog</a>
         <a href="#">Challenges</a>
         <a href="#">Flexbox</a>
@@ -148,7 +149,7 @@
     </aside>
 
     <footer>
-      <p id="copyright" class="Copyright">
+      <p id="copyright" class="Copyright text">
         Copyright &copy; 2027 by The Code Magazine.
       </p>
     </footer>
