--- a/UDEMY/Challenges/index.html
+++ b/UDEMY/Challenges/index.html
@@ -18,11 +18,21 @@
       </header>
       <p class="price"><strong>$65.00</strong></p>
       <p class="free-shipping-css">Free shipping</p>
-      <p>
+      <p class="sale">sale</p>
+      <p class="product-description">
         Ready to dress up or down, these classic canvas Chucks are an everyday
         waedrobe staple.
       </p>
       <a href="#" class="more-information">More information &rarr; </a>
+
+      <div class="colors">
+        <div class="color"></div>
+        <div class="color color-blue"></div>
+        <div class="color color-red"></div>
+        <div class="color color-yellow"></div>
+        <div class="color color-green"></div>
+        <div class="color color-brown"></div>
+      </div>
 
       <h3 class="product-details-title">Product details</h3>
       <ul class="li-style">
