--- a/UDEMY/practiceCSS/prctice/index.html
+++ b/UDEMY/practiceCSS/prctice/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>practice</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <h1 class="title">전체 제목입니다.</h1>
     <div class="box1">
-      <h1 class="tutle" id="headline">제목입니다.</h1>
+      <h1 class="title" id="headline">제목입니다.</h1>
       <p class="contents">내용입니다.</p>
     </div>
   </body>
