--- a/UDEMY/practiceCSS/prctice-fontstyle/index.html
+++ b/UDEMY/practiceCSS/prctice-fontstyle/index.html
@@ -3,14 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>practice</title>
+    <title>practice-fontstyle</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <h1 class="title">전체 제목입니다.</h1>
     <div class="box1">
       <h1 class="title" id="headline">제목입니다.</h1>
+      <!--해당 항목을 빠르게 작성할 때 h1.title#headline 을 적용하자 -->
       <p class="contents">내용입니다.</p>
+      <!--해당 항목을 빠르게 작성할 때 p.title -->
+      <!-- .은 class #은 id -->
     </div>
   </body>
 </html>
