--- a/UDEMY/practiceCSS/practice-boxsizing/index.html
+++ b/UDEMY/practiceCSS/practice-boxsizing/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>practice-boxmodel</title>
+    <title>practice-boxsizing</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <!-- <div class="box1">DIV 입니다.</div> -->
-
-    <div class="box1">box1 입니다.</div>
-    <div class="box2">box2 입니다.</div>
+    <div class="container">
+      <div class="box1">box1</div>
+      <div class="box2">box2</div>
+      <div class="box3">box3</div>
+    </div>
   </body>
 </html>
