--- a/UDEMY/practiceCSS/01-01-font-style/index.html
+++ b/UDEMY/practiceCSS/01-01-font-style/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>practice-fontstyle</title>
+    <title>01-01-font-style</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
