--- a/UDEMY/practiceCSS/01-02-box-modle/index.html
+++ b/UDEMY/practiceCSS/01-02-box-modle/index.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>practice-boxsizing</title>
+    <title>01-02-box-modle</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="box1">box1</div>
-      <div class="box2">box2</div>
-      <div class="box3">box3</div>
-    </div>
+    <!-- <div class="box1">DIV 입니다.</div> -->
+
+    <div class="box1">box1 입니다.</div>
+    <div class="box2">box2 입니다.</div>
   </body>
 </html>
