--- a/UDEMY/my-diary/index.html
+++ b/UDEMY/my-diary/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Choe Diary</title>
+    <link rel="stylesheet" href="./index.css">
   </head>
   <body>
     <div class="container">
@@ -13,16 +14,16 @@
           <br class="wrapper__head__sub-title">
             나만의 일기장입니다! <br>원하는 색과 사이즈로 일기장을
             커스텀해보세요.</br>
-            <span id="point">Have a good day.☺️</span>
+            <p class="point1">Have a good day.☺️</p>
           </p>
         </div>
         <div class="wrapper__body">
-          <div class="warpper__body__content">
+          <div class="wrapper__body__content">
+            <h3 class="wrapper__body__head__title">📌쭈꾸미의 일기</h3>
             <p>
-              일기 예시입니다. <br>br 태그를 이용하면 줄바꿈을 할 수 있습니다.
-            </p>
-            <p>p 태크를 이용하면 새로운 문단에 글을 작성할 수 있습니다.</p>
-            <span>p 태그 안에서 span 태그를 이용하면, 일부 문장에만 css를 적용할 수 있습니다.</span>
+              오늘은 <span class="menu1">김치찜</span>을 먹었다. <span class="menu2">🧀치즈 계란말이</span>도 같이 나오는 세트였다. <p>맛있어서 정신업이 먹다 보니 배가 너무 불러서 힘들었다.</p>
+            <p>내일은 <span class="point2">과식하지 말아야겠다!!</span></p>
+            <p class="date">2022년 6월 2일 <br>날씨 맑음☀️</p>
           </div>
         </div>
       </div>
